--- a/back_end/Seoul_Restaurant_Map/build.gradle
+++ b/back_end/Seoul_Restaurant_Map/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.projectlombok:lombok'
 	implementation  'mysql:mysql-connector-java:8.0.32'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
