--- a/back_end/Seoul_Restaurant_Map/src/main/resources/application.properties
+++ b/back_end/Seoul_Restaurant_Map/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://34.64.246.228/mz_map?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://34.64.81.254/mz_map?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mzmap
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 logging.level.org.apache.coyote.http11=debug
 server.servlet.session.timeout=30m
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/keystore.p12
+server.ssl.key-store-password=matzip
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=spring
