--- a/back_end/Seoul_Restaurant_Map/src/main/resources/application.properties
+++ b/back_end/Seoul_Restaurant_Map/src/main/resources/application.properties
@@ -9,9 +9,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 logging.level.org.apache.coyote.http11=debug
 server.servlet.session.timeout=30m
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=none
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store=src/main/resources/keystore.p12
-server.ssl.key-store-password=matzip
+server.ssl.key-store-password=dhdlwpqkf4#
 server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=spring
+server.ssl.key-alias=tomcat
